--- a/index.html
+++ b/index.html
@@ -171,6 +171,16 @@
 							<span style="font-size:24px"><a href='https://github.com/Kaminyou/URUST'>[GitHub]</a></span><br>
 						</center>
 					</td>
+					<td align=center width=120px>
+						<center>
+							<span style="font-size:24px"><a href='./resources/2310-poster.pdf'>[Poster]</a></span><br>
+						</center>
+					</td>
+					<td align=center width=120px>
+						<center>
+							<span style="font-size:24px"><a href='https://youtu.be/eBH0DB5te2w'>[Video]</a></span><br>
+						</center>
+					</td>
 				</tr>
 			</table>
 		</table>
